--- a/about.html
+++ b/about.html
@@ -8,128 +8,292 @@
     <link rel="stylesheet" href="CSS/about.css" class="css">
   </head>
   <body>
-    <main>
-        <section class="container">
+
+    <!-- Navbar -->
+<nav class="navbar navbar-expand-lg fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html">
+        <img src="assets/images/logo.png" alt="logo" class="me-2">
+        <span>GreenTech Solutions</span>
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav" >
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Accueil</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="about.html">À propos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="services.html">Nos services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+        </ul>
+        <div class="d-flex align-items-center">
+          <!-- Search Input with Icon -->
+          <div class="input-group input-group-sm w-50">
+            <input type="search" class="form-control search-input" placeholder="Search..." aria-label="Search">
+            <span class="input-group-text">
+              <i class="bi bi-search"></i>
+            </span>
+          </div>
+          <button class="btn btn-outline-light ms-3 btn-quote">GET A QUOTE</button>
+        </div>
+      </div>
+    </div>
+  </nav>
+  
+    <!-- <main> -->
+        <!-- <section class="container"> -->
                 <!-- Premiere image -->
-            <section class="position-relative">
-                <img class="img-fluid w-100" src="assets/images/solar-panels-wind-turbines-green-energy-concept 1.jpg" alt="" style="position: absolute; top: 0; left: 0; z-index: -1;" alt="Background">
-                <div class="container hero text-white text-center py-5 text-wrap" class="text-design-1">
+            <section class="hero">
+                <!-- <img class="img-fluid w-100" src="assets/images/solar-panels-wind-turbines-green-energy-concept 1.jpg" alt="" style="position: absolute; top: 0; left: 0; z-index: -1;" alt="Background"> -->
+                <div class="hero text-white text-center py-5 text-wrap" class="text-design-1">
                     <h2>About Us</h2>
                     <p>
-                        <a class="text-light" href="">HOME</a> > About
+                        <a class="text-light" href="index.html">HOME</a> > About
                     </p>
                 </div>
             </section>
-                <!-- informations -->
-            <section class="row">
-                <div class="col"><h6>PROJECT PLANING</h6><p></p></div>
-                <div class="col"><h6>RESEARCH & ANALYSIS</h6><p></p></div>
-                <div class="col"><h6>PROJECT DONE</h6><p></p></div>
-            </section>
-            <section class="row">
-                <img class="col"src="assets/images/solar-panels-roof-solar-cell 1.jpg" alt="">
-                <div class="col">
-                    <h4>Solar power is the last energy
-                        resource that isn't owned yet nobody taxes the sun yet
-                    </h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim possimus magni distinctio tenetur voluptatibus explicabo quas ipsum dolores qui, illo, reprehenderit debitis molestias praesentium hic! Eligendi libero molestiae magni ipsum?</p>
+
+            <!-- Nos Étapes de Travail -->
+    <div class="container text-center mt-5">
+        <div class="row mt-4">
+            <div class="col-md-4">
+                <div class="circle circle-5">
+                <div class="circle circle-4">
+                <div class="circle circle-3">
+                <div class="circle circle-2">
+                <div class="circle circle-1">1
                 </div>
-            </section>
-                <!--SERVICES -->
-            <section>
-                <div><h3>THE SERVICES</h3> <h4>If you don’t know where you are going you might wind up somewhere else</h4></div>
-                <div class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                        <!-- <div class="row"> -->
-                            <div class="carousel-item"><img class="" src="assets/images/photovoltaics-solar-power-station-energy-from-natural 1.jpg" alt="">
-                                <div>
-                                    <h4></h4><p>Quand tout semble aller contre vous rappellez-vous que l’avion vole contre le vent et non avec le vent</p>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <img class="" src="assets/images/sunny-landscape-with-windmills 1.jpg" alt="">
-                                <div>
-                                    <h4></h4><p>Quand tout semble aller contre vous rappellez-vous que l’avion vole contre le vent et non avec le vent</p>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <img class="" src="assets/images/wind-farm-farmland 1.jpg" alt="">
-                                <div>
-                                    <h4></h4><p>Quand tout semble aller contre vous rappellez-vous que l’avion vole contre le vent et non avec le vent</p>
-                                </div>
-                            </div>
-                        <!-- </div> -->
-                            <div class="carousel-item">
-                                <img class="" src="assets/images/front-view-plant-growing-from-pellets 1.jpg" alt="">
-                                <div>
-                                    <h4></h4> <p>Quand tout semble aller contre vous rappellez-vous que l’avion vole contre le vent et non avec le vent</p>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <img class="" src="" alt="">
-                                <div>
-                                    <h4></h4><p>Quand tout semble aller contre vous rappellez-vous que l’avion vole contre le vent et non avec le vent</p>
-                                </div>
-                            </div>
-                            <div class="carousel-item">
-                                <img class="" src="" alt="">
-                                <div>
-                                    <h4></h4><p>Quand tout semble aller contre vous rappellez-vous que l’avion vole contre le vent et non avec le vent</p>
-                                </div>
-                            </div>
-                    </div>                                                                                                  
                 </div>
-            </section>
-                <!--Section des avis  -->
-            <section>
-                <section>
-                    <div></div>
-                    <div>
-                        <h3>Solar power is the last energy resource that isn't owned yet...</h3> 
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga atque iure molestiae. Saepe nobis magni consectetur, corporis ipsum natus adipisci atque. Commodi repellendus eligendi autem magnam voluptatum aspernatur exercitationem ipsam?</p>
+            </div>
+            </div>
+            </div>
+                <h5>Planification de projet</h5>
+                <p>L’énergie éolienne est l’une des ressources les plus durables disponibles.</p>
+            </div>
+            <div class="col-md-4">
+                <div class="circle circle-5">
+                    <div class="circle circle-4">
+                    <div class="circle circle-3">
+                    <div class="circle circle-2">
+                    <div class="circle circle-1">2
                     </div>
-                </section>
-                <section>
-                    <div>
-                        <h3>Get In Touch</h3> 
-                        <p>We work with ecosystem leaders, corporations and startups worldwide. How can we help you?</p>
                     </div>
-                    <div>
-                        <form action="">
-                            <input type="text">
-                            <input type="text">
-                            <input type="text">
-                            <input type="submit" value="Submit">
-                        </form>
+                </div>
+                </div>
+                </div>
+                <h5>Recherche & Analyse</h5>
+                <p>Nous menons une étude approfondie avant de lancer un projet.</p>
+            </div>
+            <div class="col-md-4">
+                <div class="circle circle-5">
+                    <div class="circle circle-4">
+                    <div class="circle circle-3">
+                    <div class="circle circle-2">
+                    <div class="circle circle-1">3
                     </div>
-                </section>
-            </section>
-                <!-- section de citations -->
-            <section class="row">
-                <div class="col">
-                    <div><img  src="assets/images/attractive-hardworking-young-afro-american-office-worker-sitting-desk-front-open-laptop-pc-making-notes 1.jpg" alt=""></div>
-                    <di >Alexis KEREN <br> Senior manager</div>
-                    <div></div>
+                    </div>
                 </div>
-                <div class="col">
-                    <div><img  src="assets/images/businesswoman-relaxing-smiling 1.jpg" alt=""></div>
-                    <div >Kemal ADJRA <br> Senior accounter</div>
-                    <div></div>
                 </div>
-                <div class="col">
-                    <div><img src="assets/images/serious-african-businessman-working-laptop-sitting-conference-table 1.jpg" alt=""></div>
-                    <div >Milyan HYSCHOUL <br> Senior engineer</div>
-                    <div></div>
                 </div>
-            </section>
-                <!-- section membres de l'equipe -->
-            <section class="row">
-                <div class="col"><img src="assets/images/istockphoto-1328903775-1024x1024 1.jpg" alt="member image"></div>
-                <div class="col"><img src="assets/images/istockphoto-1463616230-1024x1024 1.jpg" alt="member image"></div>
-                <div class="col"><img src="assets/images/istockphoto-1463616260-1024x1024 1.jpg" alt="member image"></div>
-                <div class="col"><img src="assets/images/istockphoto-184394011-1024x1024 1.jpg" alt="member image"></div>
-            </section>
-        </section>
-    </main>
-</body>
+                <h5>Projet terminé</h5>
+                <p>Nous livrons des résultats optimaux pour un changement durable.</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Section pour afficher le nombre d'années et le texte associé -->
+<div class="container mt-5">
+    <div class="row align-items-center">
+        <!-- Colonne gauche avec le grand nombre 29 -->
+        <div class="col-md-4">
+            <div class="experience-number"><img src="assets/images/29.jpg" alt="nombre 29"></div>
+            <div class="experience-subtitle">Years of Experience...</div>
+        </div>
+
+        <!-- Colonne droite avec le texte explicatif -->
+        <div class="col-md-8" >
+            <div class="experience-text">
+                <h2>Solar power is the last energy resource that isn't owned yet nobody taxes the sun yet</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas Lorem ipsum dolor sit amet</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Nos services -->
+
+<section class="container text-center mt-5">
+    <h2 class="heading">NOS SERVICES</h2> 
+    <div class="row mt-5 gap--1">
+        <div class="col-md-4 float-image-start">
+            <img src="assets/images/sunny-landscape-with-windmills 1.jpg" alt="" class="img-fluid">
+            <h5>PANNEAU SOLAIRE</h5>
+            <p>Quand tout semble aller contre vous rappellez-vous que l’avion vole contre le vent et non avec le vent</p>
+        </div>
+        <div class="col-md-4 float-image-center">
+            <img src="assets/images/wind-farm-farmland 1.jpg" alt="" class="img-fluid">
+            <h5>BIOMASSE ET BIOGAZ</h5>
+            <p>Quand tout semble aller contre vous rappellez-vous que l’avion vole contre le vent et non avec le vent</p>
+        </div>
+        <div class="col-md-4 float-image-end">
+            <img src="assets/images/photovoltaics-solar-power-station-energy-from-natural 1.jpg" alt="" class="img-fluid">
+            <h5>EOLIENNES</h5>
+            <p>Quand tout semble aller contre vous rappellez-vous que l’avion vole contre le vent et non avec le vent</p>
+        </div>
+    </div>
+ </section>
+
+
+<!-- Section des avis -->
+
+<section class="avis">
+    <div class="container-avis">
+        <div class="col-md-6 box">
+            <div class="box1">
+                <h2>245+</h2>
+                <p>Our market growth always crosses the big and bid day by day</p>
+            </div>
+            <div class="box2">
+                <h2>245+</h2>
+                <p>Our market growth always crosses the big and bid day by day</p>
+            </div>
+            <div class="box3">
+                <h2>245+</h2>
+                <p>Our market growth always crosses the big and bid day by day</p>
+            </div>
+            <div class="box4">
+                <h2>245+</h2>
+                <p>Our market growth always crosses the big and bid day by day</p>
+            </div>
+            <h3>Solar power is the last energy resource that isn't owned yet...</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. If you have any questions or need help, feel free to contact our team, or you can call us anytime... +088 123 654 98</p>
+        </div>
+
+        <!-- Deuxième colonne avec la carte responsive contenant un formulaire -->
+        <div class="col-md-6">
+            <div class="card" >
+                <div class="overlay">
+                    <h2 class="text-center text-white">Get In Touch</h2>
+                    <h4 class="text-center text-white">We work with ecosystem leaders, corporations, and startups worldwide. How can we help you?</h4>
+                    <form action="">
+                        <div class="mb-3">
+                            <input type="text" class="form-control" placeholder="name">
+                        </div>
+                        <div class="mb-3">
+                            <input type="email" class="form-control" placeholder="email">
+                        </div>
+                        <div class="mb-3">
+                            <textarea class="form-control" rows="3" placeholder="comment"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary w-100">Submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>        
+    </div>
+</section>
+
+
+<!-- tEAM Members -->
+<section class="container text-center mt-5">
+    <h2 class="heading">Team Members</h2> 
+    <div class="row mt-5">
+        <div class="col-md-3 position-relative">
+            <img src="assets/images/istockphoto-1328903775-1024x1024 1.jpg" alt="">
+            <div class="name-overlay">
+                <h6>Elfried Fiona</h6>
+            </div>
+        </div>
+        <div class="col-md-3 position-relative">
+            <img src="assets/images/istockphoto-184394011-1024x1024 1.jpg" alt="">
+            <div class="name-overlay">
+                <h6>Manix., Responsable de projet</h6>
+            </div>
+        </div>
+        <div class="col-md-3 position-relative">
+            <img src="assets/images/istockphoto-1463616260-1024x1024 1.jpg" alt="">
+            <div class="name-overlay">
+                <h6>Murielle</h6>
+            </div>
+        </div>
+        <div class="col-md-3 position-relative">
+            <img src="assets/images/istockphoto-1463616230-1024x1024 1.jpg" alt="">
+            <div class="name-overlay">
+                <h6>Giscard</h6>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Pied de page -->   
+ 
+<footer class="footer">
+    <div class="container">
+
+        <!-- Company Logo and Description -->
+        <div class="text-center">
+            <div class="footer-logo"><img src="assets/images/logo.png" alt="logo" class="me-2">Green Tech Solutions</div>
+            <p>Long established fact that a reader will be distracted by the readable content...</p>
+            <div class="social-icons">
+                <a href="#"><i class="bi bi-twitter"></i></a>
+                <a href="#"><i class="bi bi-facebook"></i></a>
+                <a href="#"><i class="bi bi-instagram"></i></a>
+                <a href="#"><i class="bi bi-skype"></i></a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="divider"></div>
+            <!-- Contact Section -->
+            <div class="col-md-3 text-center">
+                <p><strong>Contact Rapide</strong></p>
+                <p><strong>Téléphone:</strong></p>
+                <p>+237 (69-------)<br>+237 (67-------)</p>
+                <p><strong>Email:</strong><br>
+                    <a href="mailto:GreenSolutions@energie.com">GreenSolutions@energie.com</a>
+                </p>
+            </div>
+
+            <!-- Recent Posts and Links -->
+            <div class="col-md-3">
+                <p><strong>Post Recent</strong></p>
+                <a href="#">Flow is the nature of wind energy</a><br>
+                <small>January 21, 2022</small><br>
+                <a href="#">The wind energy or active exercise</a><br>
+                <small>January 21, 2022</small><br>
+
+
+            </div>
+            <div class="col-md-3">
+                <p><strong>Liens Importants</strong></p>
+                <a href="#">A Propos</a>
+            </div>
+            <div class="col-md-3">
+                <p><strong>Abonnez-Vous</strong></p>
+                <p>Long established fact that a reader will be distracted by the readable content...</p>
+                <form class="d-flex justify-content-center">
+                    <input type="email" class="form-control w-50" placeholder="Votre Email">
+                    <button class="btn btn-success ms-2">Souscrire</button>
+            </div>
+        </div>
+    </div>
+    <!-- Footer Bottom -->
+    <div class="col-md-12 footer-bottom">
+        <div class="col-md-6">
+            <p>Copyright &copy; EnergIn2024. All Rights Reserved</p>
+        </div>
+        <div class="col-md-6 text-center"> <p class="word-spacing: 10px;"><a href="#">Terms & Condition</a> <a href="#">HelpCenter</a>  <a href="#">Testimonial</a>  <a href="#">Service</a> </p>
+        </div>
+    </div>
+</footer>
+                                
+                       
+    </body>
 </html>
